Update s3 publish gh action.
as of now, this is broken. it is running on every single pr. it *should* only be running when a new version is tagged and released. goign about this another way to see if it fixes it.

--- a/.github/workflows/push-release.yml
+++ b/.github/workflows/push-release.yml
@@ -1,7 +1,15 @@
 name: Publish release to S3
 
+# this flow isn't working. attempting to update with another way.
+# on:
+#   create:
+#     tags:
+#       - v*
+
 on:
-  create:
+  push:
+    branches:
+      - main
     tags:
       - v*
 
